2011-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-signed-or-encrypted-p): Exclude header when
	checking if there is signed or encrypted body in text/plain message.

2011-10-09  Andreas Schwab  <schwab@linux-m68k.org>

	* html2text.el (html2text-get-attr): Correctly handle attribute values
	containing "=".

2011-09-22  Kan-Ru Chen  <kanru@kanru.info>

	* ecomplete.el (ecomplete-display-matches): Use a local keymap to
	handle bindings.

2011-10-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-win.el (gnus-configure-windows): Protect against reading
	ephemeral groups outside of Gnus.

2011-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-tag-img): Don't get images displayed in tables.

2011-10-03  Glenn Morris  <rgm@gnu.org>

	* gnus-group.el (gnus-bug-group-download-format-alist): Once again get
	the "maintainer" version of debbugs.gnu.org reports.

2011-10-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-img): Add a space at the end of an ALT image text to
	make asynchronous adjacent image insertion work better.

2011-09-27  Daiki Ueno  <ueno@unixuser.org>

	* plstore.el (plstore-select-keys, plstore-encrypt-to): Clarify
	documentation.

2011-09-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-uu.el (gnus-uu-grab-articles): Require gnus-async so that
	`gnus-asynchronous' isn't shadowed.

2011-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-wait-for-response): Message less (bug#9540).
	(nnimap-insert-partial-structure): The charset parameter isn't
	case-sensitive.

	* nnheader.el (nnheader-message-maybe): New function.

	* shr.el (shr-tag-table): Render totally broken tables better.

	* mml.el (mml-generate-mime-1): Don't alter the contents if we're
	computing the boundary.

2011-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* pop3.el (pop3-number-of-responses): Remove.
	(pop3-wait-for-messages): Rewrite to take linear time instead of
	exponential time.
